--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -211,6 +211,92 @@
   year      = {1996},
 }
 
+@phdthesis{Beier:2009:Legibility,
+title = {Typeface Legibility: Towards defining familiarity},
+abstract = {
+The aim of the project is to investigate the influence of familiarity
+on reading. Three new fonts were created in order to
+examine the familiarity of fonts that readers could not have seen
+before. Each of the new fonts contains lowercase letters with familiar
+and unfamiliar skeleton variations. The different skeleton
+variations were tested with distance threshold and time threshold
+methods in order to account for differences in visibility. This
+investigation helped create final typeface designs where the familiar
+and unfamiliar skeleton variations have roughly similar
+and good performance. The typefaces were later applied as the
+test material in the familiarity investigation.
+Some typographers have proposed that familiarity means the
+amount of time that a reader has been exposed to a typeface
+design, while other typographers have proposed that familiarity
+is the commonalities in letterforms. These two hypotheses were
+tested by measuring the reading speed and preference of participants,
+as they read fonts that had either common or uncommon
+letterforms, the fonts were then re-measured after an exposure
+period. The results indicate that exposure has an immediate effect
+on the speed of reading, but that unfamiliar letter features
+only have an effect of preference and not on reading speed.
+By combining the craftsmen’s knowledge of designing with the
+methods of experimental research, the project takes a new step
+forward towards a better understanding of how different typefaces
+can influence the reading process.
+},
+author = {Sofie Beier},
+year = {2009",
+institution = {Royal Collecge of Art},
+}
+
+@book{Beier:2012:Legibility,
+title = "Reading Letters: Designing for legibility",
+abstract = "In our everyday life we constantly encounter 
+a diversity of reading matters, including display types 
+on traffic signage, printed text in novels, newspaper headlines, 
+or our own writing on a computer screen. 
+All these conditions place different demands o
+n the typefaces applied.
+The book discusses these aspects by drawing on typography history, 
+designers{\textquoteright} ideas, and available scientific data 
+concerning the reading process.",
+keywords = "typedesign, typografi, l{\ae}selighed, Type design, 
+typography, legibility",
+author = "Sofie Beier",
+year = "2012",
+language = "English",
+isbn = "978-90-6369-271-1",
+publisher = "BIS Publishers",
+}
+
+@book{Beier:2017:TypeTricks,
+title = "Type Tricks: Your Personal Guide to Type Design",
+abstract = "{\textquoteleft}Type Tricks{\textquoteright} 
+is about typographical rules and the underlying structure 
+of the work process in the design of new typefaces. 
+In that way, it is both a reference book and a user manual. 
+In an illustrative format, it presents the different stages 
+of type design in an easily accessible manner. 
+Being an expert as a typography professor, 
+Sofie Beier knows exactly what the students need to know 
+and how they can improve their skills. 
+{\textquoteleft}Type Tricks{\textquoteright} 
+is not only perfect for students, 
+it also comes in handy for every type designer. 
+It gives them the opportunity to reread information 
+they were thaught at during their time at school. 
+It{\textquoteright}s the perfect reference book. 
+The book contains a number of essential tricks 
+that designers need to know and understand. 
+The typographic guidelines are difficult to remember, 
+but with this book you don{\textquoteright}t 
+have to remember every single one of them.",
+keywords = "type design, typography",
+author = "Sofie Beier",
+year = "2017",
+month = jun,
+day = "22",
+language = "English",
+isbn = "978-9063694586",
+publisher = "BIS Publishers",
+}
+
 @Article{Benacerraf:1965:NumbersNot,
   author    = {Paul Benacerraf},
   title     = {What Numbers Could Not Be},
