--- a/templates/article-portrait2.tex
+++ b/templates/article-portrait2.tex
@@ -41,8 +41,11 @@
 \date{draft of \today}
 %-----------------------------------------------------------------
 \begin{document}
+\onecolumn
 \maketitle
+\onecolumn
 \PalisadesLakesTableOfContents{7}
+\twocolumn
 %-----------------------------------------------------------------
 \input{body}
 %-----------------------------------------------------------------
