--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -3706,6 +3706,16 @@ and no access to mantissa or exponent is necessary.
   year    = {1967},
 }
 
+@mastersthesis{Rhatigan:2007:MathTypefaces,
+author={Danial Rhatigan},
+title = {Three typefaces for a mathematics:
+the development of {Times 4-line Mathematics Series 569},
+{AMS Euler}, and {Cambria Math}},
+year={2007},
+institution = {University of Reading},
+url={http://ultrasparky.org/school/pdf/DanielRhatigan_Dissertation.pdf},
+}
+
 @Article{Richman:1996:Logic,
   author    = {Richman, Fred},
   title     = {Interview with a constructive mathematician},
