--- a/tests/math.tex
+++ b/tests/math.tex
@@ -54,9 +54,13 @@ $
 ;
 $\nabla_{x} f (y) \in \codomain ( f )$
 
-$\mathsf{1lIiL} \; \mathbfsf{1lIiL}$
-
-$\mathsfit{1lIiL} \; \mathbfsfit{1lIiL}$
+{1lIiLij aα vν} \; \textbf{{1lIiLij aα vν}}\\
+{\textit{1lIiLij aα vν}} \; \textbf{{\textit{1lIiLij aα vν}}}\\
+\textsf{1lIiLij aα vν} \; \textbf{\textsf{1lIiLij aα vν}}\\
+\textsf{\textit{1lIiLij aα vν}} \; \textbf{\textsf{\textit{1lIiLij aα vν}}}\\
+$\mathsf{1lI
+iLij a\alpha v\nu} \; \mathbfsf{1lIiLij a\alpha v\nu}$\\
+$\mathsfit{1lIiLij a\alpha v\nu} \; \mathbfsfit{1lIiLij a\alpha v\nu}$
 
 \begin{eqnarray}
 \Vector{v_{01}} & = & \Point{p}_{0} - \Point{p}_{1} \in \symfrak{K}^n
