commit before reverting to test old version

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -241,7 +241,7 @@ forward towards a better understanding of how different typefaces
 can influence the reading process.
 },
 author = {Sofie Beier},
-year = {2009",
+year = {2009},
 institution = {Royal Collecge of Art},
 }
 
@@ -3706,8 +3706,16 @@ and no access to mantissa or exponent is necessary.
   year    = {1967},
 }
 
+@mastersthesis{Rhatigan:2007:GinaPractice,
+author={Daniel Rhatigan},
+title = {{Gina}: reflection on practice},
+year={2007},
+institution = {University of Reading},
+url={http://ultrasparky.org/school/pdf/DanielRhatigan_Dissertation.pdf},
+}
+
 @mastersthesis{Rhatigan:2007:MathTypefaces,
-author={Danial Rhatigan},
+author={Daniel Rhatigan},
 title = {Three typefaces for a mathematics:
 the development of {Times 4-line Mathematics Series 569},
 {AMS Euler}, and {Cambria Math}},
