--- a/templates/book-hdtv.tex
+++ b/templates/book-hdtv.tex
@@ -11,26 +11,26 @@
 % arara: clean: { extensions: [ idx, ilg, ind, xdy, ] }
 % arara: clean: { extensions: [ plCode, plData, plMath, plExercise, plNote, plQuote, ] }
 %-----------------------------------------------------------------
-\documentclass[11pt]{PalisadesLakesBook}
+\documentclass{PalisadesLakesBook}
 %\geomLegal
 %\geomLedger
 \geomHDTV
 \geomLandscape
 %-----------------------------------------------------------------
 
-%\AsanaFonts % misssing \mathhyphen; less on page than Cormorant/Garamond
-%\CormorantFonts % light, missing unicode greek, needs scaling relative to monfont
-%\EBGaramondFonts % fewest pages
+%\AsanaFonts
+%\CormorantFonts 
+%\EBGaramondFonts 
 %\ErewhonFonts
-%\FiraFonts % tall lines, all sans, much less per page, missing \in?
+%\FiraFonts 
 %\GFSNeohellenicFonts 
 %\KpFonts
 %\LatinModernFonts
-\LegibleFonts
+%\LegibleFonts
 %\LibertinusFonts
 %\NewComputerModernFonts
 %\STIXTwoFonts
-%\BonumFonts % most pages
+%\BonumFonts
 %\PagellaFonts
 %\ScholaFonts
 %\TermesFonts
