--- a/tests/fonts.tex
+++ b/tests/fonts.tex
@@ -23,7 +23,7 @@
 %\GFSNeohellenicFonts 
 %\KpFonts
 %\LatinModernFonts
-\LegibleFonts
+%\LegibleFonts
 %\LibertinusFonts
 %\NewComputerModernFonts
 %\STIXTwoFonts
