--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -4097,7 +4097,7 @@ backref=true,
   \def\dingentry{#2}\emph{#2}\index{#1}}
 
 \indexsetup{level=\nosection,noclearpage=true}
-\makeindex[columns=1]
+\makeindex
 
 % control whether index is printed or not; default false
 \newtoggle{printindex}
