--- a/tex/latex/PalisadesLakes/typesetting.tex
+++ b/tex/latex/PalisadesLakes/typesetting.tex
@@ -6,7 +6,7 @@ and {\TeX}works $0.6.5$ \cite{KewLoffler:2017:Texworks}
 on \textsc{Windows} $10$. 
 I used \texttt{arara} \cite{CeredaEtAl:2021:Arara} 
 to run \texttt{xelatex}, \texttt{biber}, \texttt{makeglossaries},  and
-\texttt{makeindex}.
+\texttt{texindy: { markup: xelatex }}.
 I believe only Mik\TeX\  and {\TeX}works are Windows specific; 
 the actual typesetting tools should be usable on Linux and MacOS as well.
 
