typesetting fails after MikTeX 2.9 update; install MikTeX 21.2; rebuilding installation step by step to avoid unneeded packages, especially font packages.

--- a/tests/math.tex
+++ b/tests/math.tex
@@ -24,7 +24,7 @@
 %\GFSNeohellenicFonts 
 %\KpFonts
 %\LatinModernFonts
-\LegibleFonts
+%\LegibleFonts
 %\LibertinusFonts
 %\NewComputerModernFonts
 %\STIXTwoFonts
